non functional requirements eval

--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -244,87 +244,158 @@ Some example questions included: \\
 	\item Considering the navigation of this program was it hard to locate various operations and actions from any given point?
 \end{enumerate}
 
-\noindent As for the non-user tests, unit tests were preformed in order to measure metrics based on the application performance.\\
+\noindent As for the non-user tests, user tests were preformed in order to measure metrics based on the application performance.
+Ratings given were on a 5 point scale.
 
 \noindent The summary of the test cases are displayed below:
 
 \subsection{Look and Feel Testing}
 \begin{enumerate}
 	\item{\textbf{test-LF-1}}: Style.\\
-	\textbf{Test result}:
+	\textbf{Test result}: 
 	
+	\begin{center}
+		\begin{tabular}{ | m{3cm} | m{3cm}| m{6cm} | } 
+		  \hline
+		  User & Rating & Notes \\ 
+		  \hline
+		  User 1 & 3 & Color scheme is reminiscent of other popular apps. \\ 
+		  \hline
+		  User 2 & 5 &  \\ 
+		  \hline
+		  User 3 & 5 &  \\ 
+		  \hline
+		\end{tabular}
+	\end{center}
+
 \subsubsection{Usability and Humanity Tests}
 	\item{\textbf{test-UH-1}}: Text Sizing and Visibility.\\
 	\textbf{Test result}:
+	\begin{center}
+		\begin{tabular}{ | m{3cm} | m{3cm}| m{6cm} | } 
+		  \hline
+		  User & Rating & Notes \\ 
+		  \hline
+		  User 1 & 5 & \\ 
+		  \hline
+		  User 2 & 5 &  \\ 
+		  \hline
+		  User 3 & 5 &  \\ 
+		  \hline
+		\end{tabular}
+	\end{center}
 	
 	\item{\textbf{test-UH-2}}: Text Language.\\
 	\textbf{Test result}:
+	N/A
 	
 	\item{\textbf{test-UH-3}}: Learnability.\\
 	\textbf{Test result}:
+	The task given to the users was to create and edit a workout program.
+	\begin{center}
+		\begin{tabular}{ | m{3cm} | m{3cm}| m{6cm} | } 
+		  \hline
+		  User & Rating & Notes \\ 
+		  \hline
+		  User 1 & 5 & \\ 
+		  \hline
+		  User 2 & 4 & I would appreciate it if I could extend my workout off of some default options rather than making it from scratch. \\ 
+		  \hline
+		  User 3 & 5 & The process was really easy and I liked seeing it in my program once I was done. \\ 
+		  \hline
+		\end{tabular}
+	\end{center}
 	
 	\item{\textbf{test-UH-4}}: Understandability.\\
 	\textbf{Test result}:
+	Users were shown the user profile, program, and exercise pages and asked questions about what each page displays.
+	\begin{center}
+		\begin{tabular}{ | m{3cm} | m{3cm}| m{6cm} | } 
+		  \hline
+		  User & Rating & Notes \\ 
+		  \hline
+		  User 1 & 2 & It is hard to understand how programs are connected to exercises. \\ 
+		  \hline
+		  User 2 & 5 & \\ 
+		  \hline
+		  User 3 & 5 & \\ 
+		  \hline
+		\end{tabular}
+	\end{center}
 	
 	\item{\textbf{test-UH-5}}: Hearing and Audio considerations.\\
 	\textbf{Test result}:
+	N/A
 	
 	\item{\textbf{test-UH-6}}: Use of Colour and Contrast.\\
 	\textbf{Test result}:
+	\begin{center}
+		\begin{tabular}{ | m{3cm} | m{3cm}| m{6cm} | } 
+		  \hline
+		  User & Rating & Notes \\ 
+		  \hline
+		  User 1 & 2 & Color scheme is boring. \\ 
+		  \hline
+		  User 2 & 5 & Very clean design and informative use of color. \\ 
+		  \hline
+		  User 3 & 4 & Would appreciate a dark mode.\\ 
+		  \hline
+		\end{tabular}
+	\end{center}
 	
 \subsubsection{Performance Tests}
 	\item{\textbf{test-PF-1}}: Speed and Latency.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Did not utilize a testing framework.
 	
 	\item{\textbf{test-PF-2}}: Accuracy and Precision of Quantifiers.\\
-	\textbf{Test result}:
+	\textbf{Test result}: 
 	
 	\item{\textbf{test-PF-3}}: Availability and Uptime.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Success.
 	
 	\item{\textbf{test-PF-4}}: User Capacity.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Success.
 	
 	\item{\textbf{test-PF-5}}: Scalability of User Capacity.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Success.
 	
 \subsubsection{Operational and Environment Tests}
 	\item{\textbf{test-OE-1}}: Supported Systems.\\
-	\textbf{Test result}:
+	\textbf{Test result}: N/A
 	
 \subsubsection{Maintainability and Support Tests}
 	\item{\textbf{test-MS-1}}: Maintenance.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Failed.
 	
 \subsubsection{Security Tests}
 	\item{\textbf{test-SEC-1}}: Private and Public Details.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Success.
 	
 	\item{\textbf{test-SEC-2}}: Passwords.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Success.
 	
 	\item{\textbf{test-SEC-3}}: Client Server Privacy.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Success.
 	
 	\item{\textbf{test-SEC-4}}: Data storage and logging.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Success.
 	
 	\item{\textbf{test-SEC-5}}: Data Backups.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Failed.
 	
 \subsubsection{Cultural Requirements Tests}
 	\item{\textbf{test-CR-1}}: Profanity and Inappropriate Language.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Failed.
 	
 	\item{\textbf{test-CR-2}}: Reporting Offensive Language.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Failed.
 	
 \subsubsection{Legal Requirements Tests}
 	\item{\textbf{test-LR-1}}: Age and Gender Use.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Success.
 	
 	\item{\textbf{test-LR-2}}: Data Protection.\\
-	\textbf{Test result}:
+	\textbf{Test result}: Failed
 	
 \end{enumerate}
 	
@@ -421,7 +492,6 @@ Below is the link from requirements to test cases.
 \section{Code Coverage Metrics}
 
 \bibliographystyle{plainnat}
-\bibliography{../../refs/References}
 
 \newpage{}
 \section*{Appendix --- Reflection}
