fix to formatting of user tests and reults

--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -644,6 +644,10 @@ Actions and results
 	Result: Success
 	
 	-	User had no trouble starting their workout and following the instructions
+	
+\item Other: 
+
+- User Suggested a more wow-ing colour scheme
 \end{enumerate}
 
 \subsection{User 3}
@@ -707,6 +711,10 @@ Result:  Success
 -	User was wondering if there was a way to time their workouts for stuff like ’30 seconds of crunches’
 
 -	User liked the easy ‘flow’ of the workout
+
+\item Other: 
+
+- User requested a dark mode
 
 \end{enumerate}
 
