Empty table for Trace to Modules

--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -417,7 +417,29 @@ Below is the link from requirements to test cases.
 	\end{adjustwidth}
 \end{table}
 \section{Trace to Modules}		
-
+\begin{table}[H]
+	\begin{tabular}{|c|c|c|}
+		\hline
+		\textbf{Module Name} & \textbf{Associated Test Ids}\\ \hline
+		Exercise Module & \\\hline
+		Workout Module & \\\hline
+		Workout Routine Module & \\\hline
+		User Login Module & \\\hline
+		User Registration Module & \\\hline
+		User Profile Module & \\\hline
+		User Fitness Goal Module & \\\hline
+		Workout Browser Module & \\\hline
+		Creation Module & \\\hline
+		Workout Creation Module & \\\hline
+		Workout Routine Creation Module & \\\hline
+		Exercise Creation Module & \\\hline
+		Timed Sequence Module & \\\hline
+		Database Communicator Module & \\\hline
+		
+	\end{tabular}
+	\caption{Test to Module Traceability Matrix}
+	\label{Table:R_trace}
+\end{table}
 \section{Code Coverage Metrics}
 
 \bibliographystyle{plainnat}
