Added some mappings

--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -421,20 +421,20 @@ Below is the link from requirements to test cases.
 	\begin{tabular}{|c|c|c|}
 		\hline
 		\textbf{Module Name} & \textbf{Associated Test Ids}\\ \hline
-		Exercise Module & \\\hline
+		Exercise Module & EX-1, QT-1, QT-2, QT-3  \\\hline
 		Workout Module & \\\hline
-		Workout Routine Module & \\\hline
-		User Login Module & \\\hline
-		User Registration Module & \\\hline
-		User Profile Module & \\\hline
-		User Fitness Goal Module & \\\hline
-		Workout Browser Module & \\\hline
-		Creation Module & \\\hline
+		Workout Routine Module & WR-1, EX-1, EX-2, EX-3, PB-1, PB-2, WS-1\\\hline
+		User Login Module & SEC-2 \\\hline
+		User Registration Module & SEC-2\\\hline
+		User Profile Module & WS-1, UP-1, UP-2, FG-1, FG-2\\\hline
+		User Fitness Goal Module & FG-1, FG-2\\\hline
+		Workout Browser Module & PB-1, PB-2, WS-1, BS-1, BS-2\\\hline
+		Creation Module & WR-1, EX-1 \\\hline
 		Workout Creation Module & \\\hline
-		Workout Routine Creation Module & \\\hline
-		Exercise Creation Module & \\\hline
+		Workout Routine Creation Module & WR-1,WR-2\\\hline
+		Exercise Creation Module & EX-1, QT-1\\\hline
 		Timed Sequence Module & \\\hline
-		Database Communicator Module & \\\hline
+		Database Communicator Module & SEC-4, SEC-5, LR-2\\\hline
 		
 	\end{tabular}
 	\caption{Test to Module Traceability Matrix}
