--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -42,7 +42,7 @@
 	Any online meetings will be conducted on \textbf{Microsoft Teams}. \\
 	
 	\section{Workflow plan}
-	GitHub will be used for all workflow and version control.
+	GitHub will be used for all workflow and version control. GitHub Actions will also be used for spell checking Latex documents. Husky will be used with pre-commit hooks for linting and formatting code before it is committed and pushed to the repository
 	
 	\subsection{Task Scheduling}
 	The \textbf{Github Kanban} project board will be used to plan and assign upcoming and ongoing tasks to team developers. \\
