intro for user guide

--- a/docs/UserGuide/UserGuide.tex
+++ b/docs/UserGuide/UserGuide.tex
@@ -20,9 +20,7 @@
 \toprule
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
-Date1 & Name(s) & Description of changes\\
-Date2 & Name(s) & Description of changes\\
-... & ... & ...\\
+March 31 2023 & Jared Bentvelsen, Matthew McCracken & Description of changes\\
 \bottomrule
 \end{tabularx}
 \end{table}
@@ -30,6 +28,12 @@ Date2 & Name(s) & Description of changes\\
 \newpage
 
 \maketitle
+
+\tableofcontents
+
+\section{Introduction}
+
+This document serves to go over the usage details of the Olympian application, allowing any potential reader to familiarize themselves with all functionality.
 
 
 \end{document}
