updated revision history

--- a/docs/Design/MG/MG.tex
+++ b/docs/Design/MG/MG.tex
@@ -45,11 +45,12 @@
 \section{Revision History}
 
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
-\toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
+\toprule
+\textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
-January 10 2023 & 1.0 & Initial Draft\\
+January 10 2023 & Matthew McCracken, Jared Bentvelsen, Bassel Rezkalla, Yuvraj Randhawa, William Lee, and Dimitri Tsampiras & Initial Draft\\
 \midrule
-March 31 2023 & 2.0 & Revision 1\\
+March 31 2023 & Matthew McCracken & Updated modules to align with end of term codebase\\
 \bottomrule
 \end{tabularx}
 
